kustomize/wordpress/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: wordpress-vs
spec:
  gateways:
  - wordpress-gateway
  hosts:
  - $(DOMAIN)
  http:
  - route:
    - destination:
        host: wordpress
